--- a/app/views/prompts/new.html.erb
+++ b/app/views/prompts/new.html.erb
@@ -1,11 +1,11 @@
 <div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl">
-  <!-- Page Header -->
-  <header class="pt-6 pb-4">
-    <h1 class="text-2xl font-bold text-gray-900 sm:text-3xl"><%= t('.title') %></h1>
-  </header>
+  <!-- Shared Header Partial -->
+  <%= render partial: 'prompts/header', locals: { 
+    title: t('.title')
+  } %>
 
-  <!-- Flash Messages Container -->
-  <div id="flash-messages"></div>
+  <!-- Shared Flash Messages -->
+  <%= render partial: 'shared/flash_messages' %>
 
   <!-- Form Partial -->
   <%= render partial: "form", locals: { prompt: @prompt } %>
